    * 3885 FIX: Fixed sorting of version in werk list (1.2.8p10 and 1.2.8p11 were not listed on top)

    WATO:
    * 3881 FIX: fixed automation call 'delete piggyback host'
    * 3738 FIX: Fixed sporadic pending changes due to (not) changed contact groups...
    * 3739 FIX: Fix exception in displaying check parameter of grouped interfaces...

    Notifications:
    * 3860 FIX: EC condition: Fixed default value of rule id selection

    Event Console:
    * 3884 FIX: Notifications: Fixed wrong LASTSERVICESTATE and SERVICESTATE in EC notifications...

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3811 FIX: HW/SW Inventory: Fixed GUI display crash when querying data from older software versions...
    * 3882 FIX: mk_inventory.linux: fixed wrong graphic card section name


1.2.8p11:
    Checks & Agents:
    * 3797 Check_MK Check helpers: Decreased memory consumption in distributed setups...
    * 3798 FIX: Clusters: Fixed invalid timestamp of last cached agent data...
    * 3848 FIX: megaraid_pdisks: Handle "rebuild" state as WARNING instead of UNKNOWN
    * 3849 FIX: check_cpu_peaks: Fixed broken active check
    * 3870 FIX: elphase.include: more robust against none type params
    * 3801 FIX: Fixed race condition with persisted data...
    * 3802 FIX: Fixed excess Check Helper PIPEs when a datasource program runs into a timeout...

    Multisite:
    * 3850 FIX: Fixed JS error when quicksearch snapin not in sidebar
    * 3871 FIX: stale services view: excluded services in downtime per default

    WATO:
    * 3855 SEC: Fixed possible command injection by privileged WATO users...


1.2.8p10:
    Core & Setup:
    * 3843 FIX: Fixed reporting of crashes when using Nagios core
    * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again

    Checks & Agents:
    * 3743 SEC: mk_jolokia: Use JSON library to parse JSON output in lieu of eval()...