@@ -30,6 +30,7 @@
     * 3881 FIX: fixed automation call 'delete piggyback host'
     * 3738 FIX: Fixed sporadic pending changes due to (not) changed contact groups...
     * 3739 FIX: Fix exception in displaying check parameter of grouped interfaces...
+    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
 
     Notifications:
     * 3860 FIX: EC condition: Fixed default value of rule id selection
